nginx-ingress-controller-basic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deploy
  namespace: example-app
  labels:
    app: example-app
    test: test
  annotations:
    fluxcd.io/tag.example-app: semver:~1.0
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      app: example-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
        - name: example-app
          image: aimvector/python:1.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: secret-volume
              mountPath: /secrets/
            - name: config-volume
              mountPath: /configs/
      volumes:
        - name: secret-volume
          secret:
            secretName: example-secret
        - name: config-volume
          configMap:
            name: example-config
