nginx-ingress-controller-basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-app
  labels:
    app: example-app
spec:
  type: LoadBalancer
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 5000
